objects/ScCollection_ContactCounterSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ScCollection_Color_Code__c</fullName>
        <label>Color Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Color__c</fullName>
        <label>Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Counter_Type__c</fullName>
        <label>Counter Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_MaxRange__c</fullName>
        <label>Max Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_MinRange__c</fullName>
        <label>Min Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Counter Setting</label>
</CustomObject>